All elements are now more or less covered
Signed-off-by: chrisgwork <workstuffdo@gmail.com>